[package]
name = "cablecrab"
version = "0.1.0"
edition = "2021"
description = "A simple packet sniffer made with rust"
repository = "https://github.com/antonio-campobasso/cablecrab"
readme = "README.md"
license-file = "LICENSE"

[lib]
crate-type = ["dylib"]

[dependencies]
clap = {version = "3.1.6", features = ["derive"] }
#libpcap = {version = "0.1.7"}
pcap = {version = "0.10.1"}
#etherparse = "0.12.0"
pktparse = "0.7.1"
libc = "0.2.132"